feat: authentication and authorization
- added bycrypt
- added jwt
- changed some routing
- added global interface: to extend Express' Request Type
- authentication middleware using jwt
- added '"include": ["**/*.ts"]' in tsconfig

--- a/Module 03 - Backend/day 9/Marketplace API/package.json
+++ b/Module 03 - Backend/day 9/Marketplace API/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.2.1"
   },
   "name": "marketplace-api",
@@ -20,5 +24,8 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7"
+  }
 }
